# react-native-opus

./: CONTRIBUTING.md  README.md  package.json  react-native-opus.podspec  react-native.config.js  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/java/com/opusturbo/: OpusTurboPackage.java
cpp/: NativeOpusTurboModule.cpp  NativeOpusTurboModule.h
example/: app.json  package.json  react-native.config.js
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/opusturbo/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/OpusTurboExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/OpusTurboExample.xcodeproj/: project.pbxproj
example/ios/OpusTurboExample.xcodeproj/xcshareddata/xcschemes/: OpusTurboExample.xcscheme
example/ios/OpusTurboExample.xcworkspace/: contents.xcworkspacedata
example/ios/OpusTurboExampleTests/: OpusTurboExampleTests.m
example/src/: App.tsx
ios/: OnLoad.mm
